// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 2`] = `
<div>
  <div>
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k"
  >
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 3`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div>
  <div
    className="theme-c__content___xSnq1"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div
    className="theme-c__content___xSnq1"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k theme-c__ad___i7Ven theme-c__hoc___6A2dq theme-c__content___xSnq1"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 4`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div
    className="theme-c__content___xSnq1"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div
    className="theme-a__content___IgY-k"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `"Invalid composition mode"`;

exports[`01 - No default theme. 01 - No options at registration. 06 - Nested ThemeProvider does not shadow parent themes it does not override 1`] = `
Array [
  <div
    className="theme-a__container___OHZan"
  >
    <div
      className="theme-a__content___IgY-k"
    />
  </div>,
  <div
    className="theme-b__container___mfrvK"
  >
    <div />
  </div>,
]
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 1`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 2`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a__container___OHZan theme-b__ad___MToBJ theme-b__hoc___D-90l theme-b__container___mfrvK"
>
  <div
    className="theme-a__content___IgY-k"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 1`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-a__container___OHZan theme-b__context___623DE theme-b__container___mfrvK"
>
  <div
    className="theme-a__content___IgY-k"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 3`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k theme-c__ad___i7Ven theme-c__hoc___6A2dq theme-c__content___xSnq1"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-a__container___OHZan theme-b__context___623DE theme-b__container___mfrvK"
>
  <div
    className="theme-a__content___IgY-k theme-c__ad___i7Ven theme-c__hoc___6A2dq theme-c__content___xSnq1"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k theme-c__context___c253P theme-c__content___xSnq1 theme-d__ad___WibJk theme-d__hoc___ycFZY theme-d__content___xEs5l"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 1`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-c__content___xSnq1 theme-a__context___YNfwL theme-a__content___IgY-k theme-d__ad___WibJk theme-d__hoc___ycFZY theme-d__content___xEs5l"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 2`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k theme-d__ad___WibJk theme-d__hoc___ycFZY theme-d__content___xEs5l"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 05 - Context + ad hoc + composition modes 3`] = `
<div>
  <div
    className="theme-c__content___xSnq1 theme-d__ad___WibJk theme-d__hoc___ycFZY theme-d__content___xEs5l"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 06 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 06 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "mapThemeProps": [Function],
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___yK+Km",
    "container": "theme-a__container___OHZan",
    "content": "theme-a__content___IgY-k",
    "context": "theme-a__context___YNfwL",
    "hoc": "theme-a__hoc___zE9Bs",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 1`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeContextTheme 2`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div
    className="theme-a__content___IgY-k"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 1`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 2`] = `
<div
  className="theme-b__container___mfrvK"
>
  <div
    className="theme-a__content___IgY-k"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 1`] = `
Array [
  <div
    className="theme-b__container___mfrvK theme-a__context___YNfwL theme-a__container___OHZan"
  >
    <div
      className="theme-a__content___IgY-k theme-c__ad___i7Ven theme-c__hoc___6A2dq theme-c__content___xSnq1"
    />
  </div>,
  <div
    className="theme-a__container___OHZan theme-b__context___623DE theme-b__container___mfrvK"
  >
    <div
      className="theme-a__content___IgY-k theme-c__ad___i7Ven theme-c__hoc___6A2dq theme-c__content___xSnq1"
    />
  </div>,
]
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___yK+Km",
    "container": "theme-a__container___OHZan",
    "content": "theme-a__content___IgY-k",
    "context": "theme-a__context___YNfwL",
    "hoc": "theme-a__hoc___zE9Bs",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 3`] = `
<div
  className="theme-a__container___OHZan"
>
  <div
    className="theme-a__content___IgY-k"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 4`] = `
Object {
  "props": Object {
    "mapThemeProps": [Function],
    "ref": null,
  },
  "theme": Object {
    "ad": "theme-a__ad___yK+Km",
    "container": "theme-a__container___OHZan",
    "content": "theme-a__content___IgY-k",
    "context": "theme-a__context___YNfwL",
    "hoc": "theme-a__hoc___zE9Bs",
  },
}
`;

exports[`02 - With default theme 02 - Options at registration 05 - Specifity tags 1`] = `
<div
  className="theme-a__container___OHZan  theme-b__container___mfrvK"
>
  <div
    className="theme-a__content___IgY-k  theme-c__hoc___6A2dq theme-c__content___xSnq1"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 05 - Specifity tags 2`] = `"Invalid adhoc theme tag"`;
